// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component renders correct error message 1`] = `
<DocumentFragment>
  <div
    class="alert error"
  >
    Error
  </div>
</DocumentFragment>
`;

exports[`Alert component renders correct success message 1`] = `
<DocumentFragment>
  <div
    class="alert success"
  >
    Success
  </div>
</DocumentFragment>
`;

exports[`Alert component renders initial state correctly 1`] = `<DocumentFragment />`;
